[gd_scene load_steps=2 format=3 uid="uid://bybmn8q8hjp7u"]

[ext_resource type="Script" uid="uid://c3a8k5bqrg2d7" path="res://scripts/guns/GunParent.gd" id="1_gunparent"]

[node name="GunParent" type="Node3D"]
script = ExtResource("1_gunparent")

[node name="GunMesh" type="MeshInstance3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="MuzzleFlashParticles" type="GPUParticles3D" parent="."]
